--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -253,7 +253,7 @@
 .player-unstarted .embed-fluid:hover {
     cursor: pointer;
 }
-.player-unstarted .embed-fluid:after {
+.player-unstarted .embed-fluid::after {
     display: inline-block;
     position: absolute;
     top: 50%;
@@ -274,7 +274,7 @@
     opacity: 0.75;
     pointer-events: none;
 }
-.player-unstarted .embed-fluid:hover:after {
+.player-unstarted .embed-fluid:hover::after {
     filter: alpha(opacity=100);
     opacity: 1;
 }
