--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -1916,7 +1916,7 @@ h4 > code {
   cursor: pointer;
 }
 
-.player-unstarted .embed-fluid:after {
+.player-unstarted .embed-fluid::after {
   display: inline-block;
   position: absolute;
   top: 50%;
@@ -1938,7 +1938,7 @@ h4 > code {
   pointer-events: none;
 }
 
-.player-unstarted .embed-fluid:hover:after {
+.player-unstarted .embed-fluid:hover::after {
   filter: alpha(opacity=100);
   opacity: 1;
 }
