--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -276,8 +276,8 @@ svg:not(:root) {
 // However, they DO support removing the click delay via `touch-action: manipulation`.
 // See:
 // * http://figuration.org/content/reboot/#click-delay-optimization-for-touch
-// * http://caniuse.com/#feat=css-touch-action
-// * http://patrickhlauke.github.io/touch/tests/results/#suppressing-300ms-delay
+// * https://caniuse.com/#feat=css-touch-action
+// * https://patrickhlauke.github.io/touch/tests/results/#suppressing-300ms-delay
 a,
 area,
 button,
