--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -245,6 +245,9 @@ pre {
     margin-top: 0; // Remove browser default top margin
     margin-bottom: 1rem; // Reset browser default of `1em` to use `rem`s
     overflow: auto; // Don't allow content to break outside
+    // We have @viewport set which causes scrollbars to overlap content in IE11 and Edge, so
+    // we force a non-overlapping, non-auto-hiding scrollbar to counteract.
+    -ms-overflow-style: scrollbar;
 }
 
 
