Reboot: Reset border-radius for button elements

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -324,6 +324,12 @@ label {
     margin-bottom: .5rem; // Allow labels to use `margin` for spacing.
 }
 
+// Remove the default `border-radius` that macOS Chrome adds.
+// Details at https://github.com/twbs/bootstrap/issues/24093
+button {
+    border-radius: 0;
+}
+
 // Work around a Firefox/IE bug where the transparent `button` background
 // results in a loss of the default `button` focus styles.
 //
