Alert-Component: Adjust close button semantics, placement, and sizing

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -811,7 +811,8 @@ $alert-margin-bottom:       $spacer !default;
 $alert-border-radius:       $border-radius !default;
 $alert-link-font-weight:    $font-weight-bold !default;
 $alert-border-width:        $border-width !default;
-
+$alert-close-padding-x:     .75rem !default;
+$alert-close-padding-y:     .75rem !default;
 
 // Media objects
 // =====
