--- a/scss/component/_alert.scss
+++ b/scss/component/_alert.scss
@@ -1,17 +1,18 @@
 // Base styles
 .alert {
+    position: relative;
     padding: $alert-padding-y $alert-padding-x;
-    padding-right: ($alert-padding-x * 2);
+    padding-right: ($alert-padding-x + ($alert-close-padding-x * 2));
     margin-bottom: $alert-margin-bottom;
     border: $alert-border-width solid transparent;
     @include border-radius($alert-border-radius);
 
     // Adjust close link position and color
     .close {
-        position: relative;
-        top: -$alert-padding-y;
-        right: (-$alert-padding-x * 2);
-        padding: $alert-padding-y $alert-padding-x;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: $alert-close-padding-y $alert-close-padding-x;
         color: inherit;
     }
 }
