Component-Modal: Adjust close button sizing and placement

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -914,6 +914,9 @@ $modal-header-padding-y:        .75rem !default;
 $modal-header-padding-x:        1rem !default;
 $modal-title-line-height:       $line-height-base !default;
 
+$modal-close-padding-y:        .75rem !default;
+$modal-close-padding-x:        .75rem !default;
+
 $modal-inner-padding-y:         .75rem !default;
 $modal-inner-padding-x:         1rem !default;
 
