--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -2,19 +2,23 @@
 .input-group {
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     width: 100%;
 
-    .form-control {
+    .form-control,
+    .custom-select {
         // Ensure that the input is always above the *appended* addon button for
         // proper border colors.
         position: relative;
         z-index: 2;
         flex: 1 1 auto;
         width: 1%;
+        // Size form input to input group height
+        height: auto;
         margin-bottom: 0;
 
-        + .form-control {
+        + .form-control,
+        + .custom-select {
             margin-left: -$input-border-width;
         }
 
@@ -27,7 +31,12 @@
 
 .input-group-addon,
 .input-group-btn,
-.input-group .form-control {
+.input-group .form-control,
+.input-group .custom-select {
+
+    display: flex;
+    align-items: center;
+
     &:not(:first-child):not(:last-child) {
         @include border-radius(0);
     }
@@ -77,6 +86,7 @@
 // Button input groups
 .input-group-btn {
     position: relative;
+    align-items: stretch;
     // Jankily prevent input button groups from wrapping with `white-space` and
     // `font-size` in combination with `inline-block` on buttons.
     font-size: 0;
@@ -138,6 +148,7 @@
         $sz-padding-x:     map-get($dims, "padding-x");
 
         .input-group-#{$size} > .form-control,
+        .input-group-#{$size} > .custom-select,
         .input-group-#{$size} > .input-group-addon,
         .input-group-#{$size} > .input-group-btn > .btn {
             @extend %form-control-#{$size};
@@ -153,6 +164,7 @@
 
 // Reset rounded corners
 .input-group .form-control:not(:last-child),
+.input-group .custom-select:not(:last-child),
 .input-group-addon:not(:last-child),
 .input-group-btn:not(:last-child) > .btn,
 .input-group-btn:not(:last-child) > .btn-group > .btn,
@@ -165,6 +177,7 @@
     border-right: 0;
 }
 .input-group .form-control:not(:first-child),
+.input-group .custom-select:not(:first-child),
 .input-group-addon:not(:first-child),
 .input-group-btn:not(:first-child) > .btn,
 .input-group-btn:not(:first-child) > .btn-group > .btn,
@@ -173,6 +186,7 @@
 .input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn {
     @include border-start-radius(0);
 }
-.form-control + .input-group-addon:not(:first-child) {
+.form-control + .input-group-addon:not(:first-child),
+.custom-select + .input-group-addon:not(:first-child) {
     border-left: 0;
 }
