--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -12,6 +12,7 @@
         .d#{$bprule}-inline-block { display: inline-block !important; }
         .d#{$bprule}-inline-flex { display: inline-flex !important; }
         .d#{$bprule}-table { display: table !important; }
+        .d#{$bprule}-table-row { display: table-row !important; }
         .d#{$bprule}-table-cell { display: table-cell !important; }
     }
 
