Utilities-Caret: Convert to use mixins for caret and dropdown-toggle, add example to docs

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -97,6 +97,19 @@
     }
 }
 
+// Caret mixins
+.btn {
+    .example-caret {
+        @include caret(start, .5rem, #000);
+    }
+
+    @include hover-focus() {
+        .example-caret {
+            @include caret-end(.5rem, #000);
+        }
+    }
+}
+
 // Form
 .cf-example > .form-control + .form-control,
 .cf-example > .custom-select + .custom-select {
