--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -22,6 +22,7 @@
 @import "mixins/badge";
 @import "mixins/buttons";
 @import "mixins/cards";
+@import "mixins/caret";
 @import "mixins/divider";
 @import "mixins/forms";
 @import "mixins/lists";
