--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -165,6 +165,11 @@
         }
     }
 
+    &[multiple] {
+        height: auto;
+        background-image: none;
+    }
+
     &:disabled {
         color: $input-disabled-color;
         cursor: $cursor-disabled;
