--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -70,7 +70,8 @@
 }
 
 @mixin make-col-offset($size, $columns: $grid-columns) {
-    margin-left: percentage($size / $columns);
+    $num: $size / $columns;
+    margin-left: if($num == 0, 0, percentage($num));
 }
 
 @mixin make-col-push($size, $columns: $grid-columns) {
