Navbar: more tweaks for IE and collapsing navbars

--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -176,6 +176,7 @@
                 // scss-lint:disable ImportantRule
                 .navbar-collapse {
                     display: flex !important;
+                    flex-basis: auto;
                 }
                 // scss-lint:enable ImportantRule
 
