--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -65,6 +65,7 @@
 <!-- IE emulation mode warning -->
 <script src="{{ site.baseurl }}/assets/js/ie-emulation-modes-warning.js"></script>
 
+{% if site.github %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -73,3 +74,4 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+{% endif %}
