Buttons: Don't apply active visuals to disable buttons, remove use of `.dropdown-toggle` since it is optional

--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -37,16 +37,13 @@
         @include box-shadow(none);
     }
 
-    &:active,
-    &.active,
-    .open > &.dropdown-toggle {
+    &:not([disabled]):not(.disabled):active,
+    &:not([disabled]):not(.disabled).active,
+    .open > & {
         // Remove the gradient for the pressed/active state
         background-image: none;
         @include box-shadow($btn-active-box-shadow);
-    }
 
-    &:active,
-    &.active {
         &:focus,
         &.focus {
             @if $enable-shadows {
