--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -23,7 +23,7 @@
 
     &:active,
     &.active,
-    .open > &.dropdown-toggle {
+    .open > & {
         color: $hover-color;
         background-color: $hover-bg;
         border-color: $hover-border;
