--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -57,7 +57,7 @@
 
     &:active,
     &.active,
-    .open > &.dropdown-toggle {
+    .open > & {
         color: $hover-color;
         background-color: $color;
         border-color: $border;
