Tables: Consolidate table-hover rules

--- a/scss/mixins/_tables.scss
+++ b/scss/mixins/_tables.scss
@@ -15,8 +15,7 @@
     .table-hover {
         .table-#{$state} {
             @include hover {
-                background-color: $hover-bg;
-
+                &,
                 > td,
                 > th {
                     background-color: $hover-bg;
