--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -10,7 +10,7 @@
         // Ensure that the input is always above the *appended* addon button for
         // proper border colors.
         position: relative;
-        z-index: 2;
+        z-index: 1;
         flex: 1 1 auto;
         width: 1%;
         // Size form input to input group height
@@ -24,7 +24,7 @@
 
         // Bring the "active" form control to the front
         @include hover-focus-active {
-            z-index: 3;
+            z-index: 2;
         }
     }
 }
@@ -32,8 +32,8 @@
 .input-group-addon,
 .input-group-btn,
 .input-group .form-control,
-.input-group .custom-select {
-
+.input-group .custom-select,
+.input-group .custom-file-control {
     display: flex;
     align-items: center;
 
@@ -45,6 +45,16 @@
 .input-group-addon,
 .input-group-btn {
     white-space: nowrap;
+}
+
+.input-group .custom-file {
+    display: flex;
+    align-items: center;
+}
+
+.input-group .custom-select,
+.input-group .custom-file {
+    width: 100%;
 }
 
 // Text input groups
@@ -106,7 +116,7 @@
 
         // Bring the "active" button to the front
         @include hover-focus-active {
-            z-index: 3;
+            z-index: 2;
         }
     }
 
@@ -124,11 +134,11 @@
     &:not(:first-child) {
         > .btn,
         > .btn-group {
-            z-index: 2;
+            z-index: 1;
             margin-left: (-$input-border-width);
             // Because specificity
             @include hover-focus-active {
-                z-index: 3;
+                z-index: 2;
             }
         }
     }
@@ -165,6 +175,7 @@
 // Reset rounded corners
 .input-group .form-control:not(:last-child),
 .input-group .custom-select:not(:last-child),
+.input-group .custom-file:not(:last-child) .custom-file-control,
 .input-group-addon:not(:last-child),
 .input-group-btn:not(:last-child) > .btn,
 .input-group-btn:not(:last-child) > .btn-group > .btn,
@@ -173,11 +184,14 @@
 .input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .btn {
     @include border-end-radius(0);
 }
+
 .input-group-addon:not(:last-child) {
     border-right: 0;
 }
+
 .input-group .form-control:not(:first-child),
 .input-group .custom-select:not(:first-child),
+.input-group .custom-file:not(:first-child) .custom-file-control,
 .input-group-addon:not(:first-child),
 .input-group-btn:not(:first-child) > .btn,
 .input-group-btn:not(:first-child) > .btn-group > .btn,
@@ -186,7 +200,11 @@
 .input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn {
     @include border-start-radius(0);
 }
-.form-control + .input-group-addon:not(:first-child),
-.custom-select + .input-group-addon:not(:first-child) {
-    border-left: 0;
+
+.form-control,
+.custom-select,
+.custom-file {
+    + .input-group-addon:not(:first-child) {
+        border-left: 0;
+    }
 }
