--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -74,5 +74,10 @@
 @mixin button-size($padding-y, $padding-x, $font-size, $border-radius) {
     padding: $padding-y $padding-x;
     font-size: $font-size;
-    @include border-radius($border-radius);
+    // Manually declare to provide an override to the browser default
+    @if $enable-rounded {
+        border-radius: $border-radius;
+    } @else {
+        border-radius: 0;
+    }
 }
