--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -52,9 +52,18 @@
     pointer-events: none;
 }
 
+.modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 // Actual modal
 .modal-content {
     position: relative;
+    width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
     // Override the `pointer-events: none;` in the .modal-dialog
     pointer-events: auto;
     background-color: $modal-content-bg;
@@ -124,6 +133,11 @@
     .modal-dialog {
         max-width: $modal-md;
         margin: $modal-dialog-sm-up-margin-y auto;
+    }
+
+    .modal-dialog-centered {
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     .modal-content {
