Update Algolia CDN links

--- a/docs/_includes/algolia-config.html
+++ b/docs/_includes/algolia-config.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
