--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -24,7 +24,7 @@
 
 <!-- Algolia DocSearch CSS -->
 {% if site.github %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 {% endif %}
 
 <!-- Docs CSS -->
